--- a/app/src/main/res/layout/row_exercise_layout.xml
+++ b/app/src/main/res/layout/row_exercise_layout.xml
@@ -32,7 +32,7 @@
                 tools:layout_editor_absoluteY="15dp" />
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/exerciseCommonTextInformation"
+                android:id="@+id/exerciseName"
                 android:layout_marginStart="@dimen/margin_standard"
                 android:text="EXERCISE NAME"
                 android:layout_width="wrap_content"
@@ -46,8 +46,8 @@
                 android:id="@+id/exerciseCommonDescription"
                 android:layout_width="wrap_content"
                 android:text="DESCRIPTION"
-                app:layout_constraintTop_toBottomOf="@id/exerciseCommonTextInformation"
-                app:layout_constraintStart_toStartOf="@id/exerciseCommonTextInformation"
+                app:layout_constraintTop_toBottomOf="@id/exerciseName"
+                app:layout_constraintStart_toStartOf="@id/exerciseName"
                 android:layout_height="wrap_content"/>
 
             <androidx.appcompat.widget.AppCompatTextView
