--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="grey100">#2081BD</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#66A1D2</color>
+    <color name="grey_for_floating_button">#c4bebe</color>
     <color name="backgroundGrey">#66A3D2</color>
     <color name="red">#ff0000</color>
     <color name="teal_row">#c7fff8</color>
