--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="extFloatingButtonTextSize">12sp</dimen>
     <dimen name="text_size_medium">18sp</dimen>
     <dimen name="big_size_text">28sp</dimen>
+    <dimen name="dialog_title_text_size">24sp</dimen>
+    <dimen name="dialog_edit_text_size">18sp</dimen>
 </resources>
