Dialog activity ext implemented with function to add exercises units ...

--- a/app/src/main/res/layout/dialog_add_exercise.xml
+++ b/app/src/main/res/layout/dialog_add_exercise.xml
@@ -80,6 +80,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/number_of_approaches_edit"
         android:textSize="@dimen/dialog_edit_text_size"
+        android:inputType="number"
         android:textColorHint="@color/white"
         android:backgroundTint="@color/white"
         app:layout_constraintBaseline_toBaselineOf="@id/dialogTvApproaches"
@@ -102,6 +103,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/number_of_repetitions_edit"
         android:textSize="@dimen/dialog_edit_text_size"
+        android:inputType="number"
         android:textColorHint="@color/white"
         android:backgroundTint="@color/white"
         app:layout_constraintBaseline_toBaselineOf="@id/dialogTvRepetitions"
