--- a/app/src/main/res/layout/dialog_add_exercise.xml
+++ b/app/src/main/res/layout/dialog_add_exercise.xml
@@ -81,6 +81,7 @@
         android:hint="@string/number_of_approaches_edit"
         android:textSize="@dimen/dialog_edit_text_size"
         android:inputType="number"
+        android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:backgroundTint="@color/white"
         app:layout_constraintBaseline_toBaselineOf="@id/dialogTvApproaches"
@@ -104,6 +105,7 @@
         android:hint="@string/number_of_repetitions_edit"
         android:textSize="@dimen/dialog_edit_text_size"
         android:inputType="number"
+        android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:backgroundTint="@color/white"
         app:layout_constraintBaseline_toBaselineOf="@id/dialogTvRepetitions"
