--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="grey100">#2081BD</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white_transparent">#80FFFFFF</color>
     <color name="grey">#66A1D2</color>
     <color name="grey_for_floating_button">#c4bebe</color>
     <color name="backgroundGrey">#66A3D2</color>
